--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,12 +16,12 @@
   }
 }
 
+html,
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  height: 100%;
+}
+
+#__next {
+  height: 100%;
 }
